# tsundeoku

./: .gitignore  .pre-commit-config.yaml  .python-version  Brewfile.dev  Brewfile.prod  Cargo.toml  Justfile  Makefile  README.md  cog.toml  flake.nix  go.mod  install-dependencies  justfile  main.go  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  rustfmt.toml  test.toml  tsundeoku.toml  zellij-layout.kdl
cmd/: root.go
just/: python.just  rust.just  tsundeoku.just
musicbros/: config.py  helpers.py  import_new.py  library.py  main.py  remove_nonsense.py  strip_bracket_years.py  style.py  tags.py  update.py  update_metadata.py
nix/: go.nix  python.nix  rust.nix  tsundeoku.nix
scripts/: check.nu  dependencies.nu  domain.nu  environment.nu  find-recipe.nu  find-script.nu  gh.nu  help.nu  history.nu  install_dependencies.zsh  issue.nu  pdm.nu  pipx.nu  pnpm.nu  python.nu  release.nu  remote.nu  rtx.nu  speedscope.nu  stats.nu  test.nu  view-source.nu
scripts/python/: add.nu  build.nu  command.nu  dependencies.nu  pin.nu  profile.nu  remove.nu  run.nu  shell.nu  test.nu  update.nu  version.nu
scripts/rust/: add.nu  build.nu  clean.nu  clippy.nu  deps.nu  dev.nu  help.nu  install.nu  remove.nu  run.nu  test.nu  update.nu
src/: commands.rs  main.rs
src/commands/: config.rs  import.rs  imported.rs  logs.rs  schedule.rs
tests/: conftest.py  mocks.py  test_config.py  test_import_new.py  test_main.py  test_musicbros.py  test_musicbros_cli.py  test_reformat.py  test_schedule.py  test_style.py  test_styles.py  test_tags.py  test_update_metadata.py
tests/test_config/: test_config.py  test_config_file_system.py  test_config_import.py  test_config_notifications.py  test_config_reformat.py
tsundeoku/: __main__.py  config.py  import_command.py  import_new.py  library.py  main.py  reformat.py  regex.py  schedule.py  style.py  tags.py  update_metadata.py
tsundeoku/config/: config.py  main.py
