[package]
name = "tsundeoku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bat = "0.24.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "string"] }
colored = "2.2.0"
cron = { version = "0.14.0", features = ["serde"] }
home = "0.5.11"
path-dedot = "3.1.1"
plist = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
shellexpand = "3.1.0"
symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
symphonia-core = "0.5.4"
toml = "0.8.19"
walkdir = "2.5.0"
