[package]
name = "tsu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bat = "0.25.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "string"] }
colored = "3.0.0"
cron = { version = "0.15.0", features = ["serde"] }
cron-descriptor = "0.1.1"
english-to-cron = "0.1.2"
home = "0.5.11"
path-dedot = "3.1.1"
plist = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
shellexpand = "3.1.0"
symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
symphonia-core = "0.5.4"
toml = "0.8.19"
walkdir = "2.5.0"
