[project]
name = "tsundeoku"
version = "0.5.0"
description = """\
    CLI for managing imports from a shared folder to a \"beets\" library \
"""
authors = [
    {name = "Ben Rosen", email = "benjamin.j.rosen@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.7.0",
    "tinytag>=1.8.1",
    "beets>=1.6.0",
    "click>=8.1.3",
    "pydantic>=1.10.5",
    "rtoml>=0.9.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "xmltodict>=0.13.0",
    "yagmail>=0.15.293",
    "pync>=2.0.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest-mock>=3.10.0",
    "pytest>=7.2.1",
    "pre-commit>=3.0.4",
    "coverage>=7.2.1",
    "bpython>=0.24",
]

[project.urls]
repository = "https://github.com/tymbalodeon/tsundeoku"

[project.scripts]
agni = "agni.main:agni"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
preview = true
line-length = 79

[tool.flake8]
extend-ignore = "E203"

[tool.isort]
profile = "black"
