[project]
name = "tsundeoku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beets>=2.2.0",
  "cyclopts>=3.1.2",
  "pydantic>=2.10.3",
  "pync>=2.0.3",
  "rich>=13.9.4",
  "tinytag>=2.0.0",
  "tomli-w>=1.1.0",
  "tomli>=2.2.1",
  "xmltodict>=0.14.2",
  "yagmail>=0.15.293",
]

[dependency-groups]
dev = ["bpython>=0.24", "pytest>=8.3.3"]

[project.scripts]
tsundeoku = "tsundeoku.main:tsundeoku"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# exclude = [".git", ".ruff_cache", ".venv", "build", "dist"]
line-length = 79
indent-width = 4
