[project]
name = "tsundeoku"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cyclopts>=3.1.2",
  "pydantic>=2.10.4",
  "pync>=2.0.3",
  "rich>=13.9.4",
  "tinytag>=2.0.0",
  "toml>=0.10.2",
  "xmltodict>=0.14.2",
  "yagmail>=0.15.293",
]

[dependency-groups]
dev = ["bpython>=0.24", "pytest>=8.3.3", "vulture>=2.14"]

[project.scripts]
tsundeoku = "tsundeoku.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
